--- a/views/index.ejs
+++ b/views/index.ejs
@@ -542,7 +542,7 @@
             bindClick($('.help'),showHelp);
             bindClick($('.musicwall'),hideAll);
 
-            bindClick($('.video-wrap'),showIframe,result_wrap,'.result-video');
+            bindClick($('.video-wrap'),showIframe,result_wrap,'.video-wrap');
             bindClick($('.result-audio'),stopBackgroundMusic,result_wrap,'.result-audio');
 
             $('#result-content').on('touchstart',function(){contentScrolling=true;});
