--- a/views/index.ejs
+++ b/views/index.ejs
@@ -483,7 +483,7 @@
 
             parent=$(this).closest('.result-video');
             id=parent.attr('data-id');
-            self.html(template('template-youku',{youku_id:id,height:self.height()-20,width:280}));
+            self.html(template('template-youku',{youku_id:id,height:self.height(),width:280}));
             YKU.Player('youkuplayer'+id,{
             styleid: '0',
             client_id: '<%=youku_client_id%>',
