--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -383,6 +383,8 @@ td,tr,table{
             .result-audio-title,.result-video-title{
                 background-color:#dedede;
                 box-shadow:0px 3px 2px rgba(105,105,105,0.6);
+                position:relative;
+                z-index:1;
                 cursor:pointer;
                 border:3px 3px 0 0;
                 width:100%;
