--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -455,7 +455,7 @@ td,tr,table{
                 -webkit-transform:perspective(100px) rotateZ(0deg) rotateY(0deg);
                 opacity:0.2;
             }
-            #input-search{
+            #input-search,.rating-title{
                 width:100%;
                 height:34px;
                 border:0;
@@ -469,6 +469,11 @@ td,tr,table{
                 font-size:15px;
                 text-shadow:0px 0px 3px #404040;
                 color:#fff;
+            }
+            .rating-title{
+                background-color:rgba(0,0,0,0.5);
+                text-shadow: 0px 1px 2px #000;
+                text-align:start;
             }
             #search-wrap.showbtn #input-search{
                 padding:0 50px 0 33px;
