--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -24,6 +24,9 @@ td,tr,table{
     display:none;
     background-color:rgba(0,0,0,0.8);
 }
+.qrcode{
+    width:100%;
+}
 .loader td{
     width:100%;
     height:100%;
