--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,14 @@
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content=" user-scalable=no, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0">
-    <meta name="author" content="Calculon 0x00111111@gmail.com">
+    <meta name="author" content="greenSnot@github">
     <head>
         <link rel="stylesheet" type="text/css" href="css/mclassical.css">
         <script>var log=console.log.bind(console);</script>
         <script type="text/javascript" src="http://player.youku.com/jsapi">
 </script>
+        <script>console.log=log;</script>
         <script src='js/mclassical-base.js?version=<%=version%>'></script>
-        <script src='js/mclassical-pano.js?version=<%=version%>'></script>
         <title>古典音乐放大镜</title>
     </head>
 <body>
@@ -78,14 +78,14 @@
             </div>
         </div>
 
-        <div id="pano">
+        <div id="snot-pano">
             <div id="container">
                 <div id="camera">
                 </div>
             </div>
         </div>
 
-        <div id="music-details">
+        <div id="sprite-music-content">
              <div id="music-wrap">
                  <div id="music-album">
                      <div id="music-album-full"></div>
@@ -176,6 +176,13 @@
 <script id="template-youku" type="text/html">
     <div id="youkuplayer<#=youku_id#>" style="height:<#=height#>px;width:100%;display:block;"></div>
 </script>
+<script id="template-sprite-music" type="text/html">
+    <div class="sprite-music-wrap">
+        <div type="<#=spriteType#>" class="sprite-music" style="z-index:<#=zindex#>;background-image:url(<#=album_thumbnail#>);background-size:100%"></div>
+    </div>
+</script>
+<script src='js/snot-utils.min.js?version=<%=version%>'></script>
+<script src='js/snot-pano.min.js?version=<%=version%>'></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
 <script src="/js/wechatSharing.js"></script>
 <script>
@@ -289,7 +296,7 @@
 
         var QQMusicUrls=JSON.parse('<%-JSON.stringify(QQMusicUrls)%>');
 
-        var Musics={};
+        function initMusicWall(){
         var ri=0;
         var rj=-70;
         var zindex=0;
@@ -298,25 +305,37 @@
                 res=JSON.parse(res);
                 if(res.showapi_res_body&&res.showapi_res_body.pagebean&&res.showapi_res_body.pagebean.contentlist){
                     var clist=res.showapi_res_body.pagebean.contentlist;
-                    for(var j in clist){
+                    for(var j=0;j<clist.length;++j){
                         if(j>14)break;
-                        var index='QQMusic_'+clist[j].songid;
-                        Musics[index]={};
-                        Musics[index].song_id=urldecode(clist[j].songid);
-                        Musics[index].song_name=urldecode(clist[j].songname);
-                        Musics[index].player=urldecode(clist[j].singername);
-                        Musics[index].albumn_name=urldecode(clist[j].albumname);
-                        Musics[index].url=clist[j].m4a;
-                        //Musics[index].url="http://tsmusic24.tc.qq.com/"+clist[j].songid+".mp3";
-                        Musics[index].album_small=clist[j].albumpic_small?clist[j].albumpic_small:'/images/gray.jpg';
-                        Musics[index].album_big=clist[j].albumpic_big?clist[j].albumpic_big:'/images/gray.jpg';
 
+                        var rx=rj;
+                        var ry=(ri+rj/80*360)%360;
+                        var p=rotation2Position(300,rx,ry);
 
-                        Musics[index].rx=rj;
-                        Musics[index].ry=(ri+rj/80*360)%360;
-                        Musics[index].zindex=++zindex;
+                        snot.loadSprites([{
+                            template:'template-sprite-music',
+                            spriteType:'sprite-music',
+                            id:'123',
+                            
+                            x:p[0],
+                            y:p[1],
+                            z:p[2],
 
-                        pano.loadMusic(Musics[index]);
+                            rx:rx,
+                            ry:ry,
+                            song_id:urldecode(clist[j].songid),
+                            song_name:urldecode(clist[j].songname),
+                            player:urldecode(clist[j].singername),
+                            album_name:urldecode(clist[j].albumname),
+                            url:clist[j].m4a,
+                            album_thumbnail:clist[j].albumpic_small?clist[j].albumpic_small:'/images/gray.jpg',
+                            album_image:clist[j].albumpic_big?clist[j].albumpic_big:'/images/gray.jpg',
+                            zindex:++zindex
+
+                        }]);
+                        
+                        //"http://tsmusic24.tc.qq.com/"+clist[j].songid+".mp3";
+
                         if(rj>=70){
                             rj=-70;
                             ri+=60;
@@ -330,6 +349,7 @@
 
             });
         }
+        };
 
         $('#input-search').focus(function(){
             $(this).addClass('focus');
@@ -348,12 +368,12 @@
             stopSearchAnimation=true;
             $('#input-search').val($('#music-songname').text());
             search($('#music-songname').text());
-            $('#music-details').offsetWidth=$('#music-details').offsetWidth;
-            $('#music-details').removeClass('show');
+            $('#sprite-music-content').offsetWidth=$('#sprite-music-content').offsetWidth;
+            $('#sprite-music-content').removeClass('show');
         }
         function hideDetails(){
-            $('#music-details').offsetWidth=$('#music-details').offsetWidth;
-            $('#music-details').removeClass('show');
+            $('#sprite-music-content').offsetWidth=$('#sprite-music-content').offsetWidth;
+            $('#sprite-music-content').removeClass('show');
         }
         function clearSearch(){
             if(stopSearchAnimation==false){
@@ -530,12 +550,12 @@
 
         var bodyDom=$('body');
         var result_wrap=$('#result-wrap');
-        if(checkMobile()){
+        if(isMobile()){
             maxfov=100;
             fov=100;
             minfov=100;
 
-            bindClick($('#music-details'),hideDetails);
+            bindClick($('#sprite-music-content'),hideDetails);
             bindClick($('#music-more'),moreInfo);
             bindClick($('#music-info'),nothing);
             bindClick($('#music-album'),nothing);
@@ -568,7 +588,7 @@
             $('.user').on('mouseup',function(){
                 location.href='/rating';
             });
-            $('#music-details').on('mouseup',hideDetails);
+            $('#sprite-music-content').on('mouseup',hideDetails);
             $('#music-more').on('mouseup',moreInfo);
             $('#music-album').on('mouseup',nothing);
             $('#input-search').on('mouseup',clearSearch);
@@ -597,19 +617,26 @@
         }
 
         function musicClick(content){
+        }
+
+        function onSpriteClick(data){
+            snot.autoRotation=0;
+            snot.setRx(data.rx,true);
+            snot.setRy(data.ry,true);
+            console.log(data);
             stopAllMusic();
             hideNavs();
             hideIntroduction();
             $('#search-wrap').removeClass('show');
             $('#result-wrap').removeClass('show');
             setTimeout(function(){
-                $('#music-album').css('background-image','url('+content.attr('album_small')+')');
-                $('#music-album-full').css('background-image','url('+content.attr('album_big')+')');
-                $('#music-songname').text(content.attr('song_name'));
-                $('#music-albumname').text(content.attr('album_name'));
-                $('#music-singer').text(content.attr('player'));
-                $('#music-details').offsetWidth=$('#music-details').offsetWidth;
-                $('#music-details').addClass('show');
+                $('#music-album').css('background-image','url('+data.album_thumbnail+')');
+                $('#music-album-full').css('background-image','url('+data.album_image+')');
+                $('#music-songname').text(data.song_name);
+                $('#music-albumname').text(data.album_name);
+                $('#music-singer').text(data.player);
+                $('#sprite-music-content').offsetWidth=$('#sprite-music-content').offsetWidth;
+                $('#sprite-music-content').addClass('show');
             },300);
             if(!audio){
                 audio=audiojs.create($('#audio')[0], {
@@ -632,10 +659,10 @@
                         randomPlay();
                     }
                 });
-                audio.load(content.attr('url'));
+                audio.load(data.url);
                 audio.playPause();
             }else{
-                audio.load(content.attr('url'));
+                audio.load(data.url);
                 audio.playPause();
                 audio.playPause();
                 if(!audio.playing){
@@ -643,19 +670,16 @@
                 }
             }
         }
+        snot.init({
+            maxfov: maxfov,
+            minfov: minfov,
+            fov   : fov,
 
-        pano.init({
-            dom   : $('#pano'), // Panorama dom
-            maxfov: maxfov,     // Max field of view
-            minfov: minfov,     // Min field of view
-            fov   : fov,        // Default field of view
-
-            musicClick:musicClick,
-
-            autoRotate: 0.1,
-
-            mode      : 'viewer'
-
+            callback:initMusicWall,
+            autoRotation: 0.1,
+            onClick:function(){},
+            minDetectDistance:30,
+            onSpriteClick:onSpriteClick
         });
 </script>
 
