--- a/views/index.ejs
+++ b/views/index.ejs
@@ -322,7 +322,7 @@
                             song_name:audio.name.en||audio.name.cn,
                             player:audio.players[0].name.en||audio.players[0].name.cn,
                             album_name:audio.album_name.en||audio.album_name.cn,
-                            url:audio.resource[0].url,
+                            url:audio.resources[0].url,
                             album_thumbnail:audio.album_thumbnail||'/images/gray.jpg',
                             album_image:audio.album_image||'/images/gray.jpg',
                             zindex:++zindex
