--- a/public/css/mclassical.css
+++ b/public/css/mclassical.css
@@ -475,7 +475,7 @@ td,tr,table{
                 -webkit-box-align:center;
                 -webkit-box-pack:start;
                 height:46px;
-                width:100px;
+                width:100%;
                 padding-right:62px;
                 box-sizing:border-box;
                 -webkit-transform-origin-x:0;
