--- a/views/index.ejs
+++ b/views/index.ejs
@@ -174,10 +174,10 @@
         <div type="<#=spriteType#>" class="sprite-music" style="z-index:<#=zindex#>;background-image:url(<#=album_thumbnail#>);background-size:100%"></div>
     </div>
 </script>
-<script src='js/snot-utils.min.js?version=<%=version%>'></script>
-<script src='js/snot-pano.min.js?version=<%=version%>'></script>
+<script src='/js/snot-utils.min.js?version=<%=version%>'></script>
+<script src='/js/snot-pano.min.js?version=<%=version%>'></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script src="/js/wechatSharing.js"></script>
+<script src="/js/wechatSharing.js?version=<%=version%>"></script>
 <script>
         template.config('openTag','<#');
         template.config('closeTag','#>');
