--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,12 +4,12 @@
     <meta name="viewport" content=" user-scalable=no, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0">
     <meta name="author" content="greenSnot@github">
     <head>
-        <link rel="stylesheet" type="text/css" href="css/mclassical.css">
+        <link rel="stylesheet" type="text/css" href="http://static.mclassical.org/css/mclassical.css">
         <script>var log=console.log.bind(console);</script>
         <script type="text/javascript" src="http://player.youku.com/jsapi">
 </script>
         <script>console.log=log;</script>
-        <script src='js/mclassical-base.js?version=<%=version%>'></script>
+        <script src='http://static.mclassical.org/js/mclassical-base.js?version=<%=version%>'></script>
         <title>古典音乐放大镜</title>
     </head>
 <body>
@@ -112,7 +112,7 @@
         </div>
 
 </body>
-<script src="/js/template-native.js"></script>
+<script src="http://static.mclassical.org/js/template-native.js"></script>
 <script id="template-results" type="text/html">
     <#if(
     (scores==undefined||(scores&&scores.length==0))&&
@@ -165,7 +165,7 @@
         </a>
     <#}#>
 </script>
-<script src="js/audio.min.js"></script>
+<script src="http://static.mclassical.org/js/audio.min.js"></script>
 <script id="template-youku" type="text/html">
     <div id="youkuplayer<#=youku_id#>" style="height:<#=height#>px;width:100%;display:block;"></div>
 </script>
@@ -174,10 +174,10 @@
         <div type="<#=spriteType#>" class="sprite-music" style="z-index:<#=zindex#>;background-image:url(<#=album_thumbnail#>);background-size:100%"></div>
     </div>
 </script>
-<script src='/js/snot-utils.min.js?version=<%=version%>'></script>
-<script src='/js/snot-pano.min.js?version=<%=version%>'></script>
+<script src='http://static.mclassical.org/js/snot-utils.min.js?version=<%=version%>'></script>
+<script src='http://static.mclassical.org/js/snot-pano.min.js?version=<%=version%>'></script>
 <script src="http://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-<script src="/js/wechatSharing.js?version=<%=version%>"></script>
+<script src="http://static.mclassical.org/js/wechatSharing.js?version=<%=version%>"></script>
 <script>
         template.config('openTag','<#');
         template.config('closeTag','#>');
