--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,10 +3,9 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="viewport" content=" user-scalable=no, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0">
     <head>
-        <link rel="stylesheet" type="text/css" href="css/mclassical.css">
+        <link rel="stylesheet" type="text/css" href="/css/mclassical.css">
         <script>var log=console.log.bind(console);</script>
-        <script type="text/javascript" src="http://player.youku.com/jsapi">
-</script>
+        <script type="text/javascript" src="http://player.youku.com/jsapi"></script>
         <script>console.log=log;</script>
         <script src="/js/mclassical-base.js"></script>
         <title>古典音乐放大镜</title>
@@ -17,7 +16,6 @@
 		<div class="tip"></div>
 	</div>
 	<script type="text/javascript" src="/js/tips.js"></script>
-
         <pjax style="display:none"><%=(pjax&&pjax.keyword)||""%></pjax>
         <div id="head">
             <a id="logo">
