--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -384,9 +384,17 @@ table {
   display: -webkit-box;
   -webkit-box-align: center;
 }
+
+.result-audio-info-wrap {
+  display: -webkit-box;
+  -webkit-box-orient: horizontal;
+  padding: 10px;
+  width: 100%;
+  box-sizing: border-box;
+}
 #result-stick {
   position: absolute;
-	z-index: 1;
+  z-index: 1;
   width: 60px;
   height: 34px;
   border: 0;
@@ -403,8 +411,8 @@ table {
 #result {
   display: -webkit-box;
   -webkit-box-orient: vertical;
-	position: relative;
-	z-index: 2;
+  position: relative;
+  z-index: 2;
   width: 100%;
   height: 100%;
   border-radius: 3px;
@@ -412,6 +420,24 @@ table {
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
   -webkit-transform-origin-x: 0;
   -webkit-transform-origin-y: 0;
+}
+.result-info {
+  font-size: 14px;
+  box-sizing: border-box;
+  text-align: start;
+  padding: 10px;
+  color: #fdfdfd;
+  text-shadow: 0px 0px 3px #666;
+}
+.info-title {
+  height: 34px;
+  line-height: 34px;
+  -webkit-transition: all 0.2s ease-out;
+  color: #666;
+  background-color: rgba(150, 150, 150, 1);
+  border-top-right-radius: 3px;
+  border-top-left-radius: 3px;
+  background-color: rgba(232, 232, 232, 1);
 }
 #result-content {
   -webkit-box-flex: 1;
